PROJECT(k3dsdk-glew)

SET(CMAKE_CXX_FLAGS_DEBUG "-g")

ADD_DEFINITIONS(-DGLEW_BUILD -DGLEW_MX)

FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCES *.c)

ADD_LIBRARY(k3dsdk-glew SHARED ${HEADERS} ${SOURCES})
K3D_GENERATE_DEF_FILE(k3dsdk-glew)
TARGET_LINK_LIBRARIES(k3dsdk-glew ${OPENGL_LIBRARIES})

INSTALL(TARGETS k3dsdk-glew
	RUNTIME DESTINATION bin 
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib
	)
