PROJECT(k3dsdk)

FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCES *.cpp)

IF(CMAKE_HAS_SORT)
	LIST(SORT HEADERS)
	LIST(SORT SOURCES)
ENDIF(CMAKE_HAS_SORT)

CONFIGURE_FILE(${k3dsdk_SOURCE_DIR}/module_config.h.in ${k3dsdk_BINARY_DIR}/module_config.h)
CONFIGURE_FILE(${k3dsdk_SOURCE_DIR}/i18n.h.in ${k3dsdk_BINARY_DIR}/i18n.h)
CONFIGURE_FILE(${k3dsdk_SOURCE_DIR}/version.h.in ${k3dsdk_BINARY_DIR}/version.h)

INCLUDE_DIRECTORIES(${k3d_SOURCE_DIR})
INCLUDE_DIRECTORIES(${k3d_SOURCE_DIR}/gil)
INCLUDE_DIRECTORIES(${k3dsdk_BINARY_DIR})
INCLUDE_DIRECTORIES(${K3D_BOOST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${K3D_GLIBMM_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${K3D_SIGC_INCLUDE_DIRS})

IF(NOT WIN32)
	INCLUDE_DIRECTORIES(${K3D_UUID_INCLUDE_DIRS})
ENDIF(NOT WIN32)

INCLUDE_DIRECTORIES(${K3D_XML_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${K3D_ZLIB_INCLUDE_DIR})

LINK_DIRECTORIES(${K3D_BOOST_LIB_DIRS})
LINK_DIRECTORIES(${K3D_SIGC_LIB_DIRS})

ADD_LIBRARY(k3dsdk SHARED ${HEADERS} ${SOURCES})
TARGET_LINK_LIBRARIES(k3dsdk ${K3D_GLIBMM_LIBS})
TARGET_LINK_LIBRARIES(k3dsdk ${K3D_SIGC_LIB})
TARGET_LINK_LIBRARIES(k3dsdk ${K3D_UUID_LIBS})
TARGET_LINK_LIBRARIES(k3dsdk ${K3D_XML_LIB})
TARGET_LINK_LIBRARIES(k3dsdk ${K3D_ZLIB_LIB})
TARGET_LINK_LIBRARIES(k3dsdk ${OPENGL_LIBRARIES})
TARGET_LINK_LIBRARIES(k3dsdk k3dsdk-half)
TARGET_LINK_LIBRARIES(k3dsdk k3dsdk-sgi-tesselator)

IF(K3D_BUILD_NLS)
	INCLUDE_DIRECTORIES(${K3D_INTL_INCLUDE_DIRS})
	TARGET_LINK_LIBRARIES(k3dsdk ${K3D_INTL_LIBS})
ENDIF(K3D_BUILD_NLS)

IF(WIN32)
	TARGET_LINK_LIBRARIES(k3dsdk ole32)
	TARGET_LINK_LIBRARIES(k3dsdk ws2_32)
	TARGET_LINK_LIBRARIES(k3dsdk k3dsdk-glew)
ENDIF(WIN32)

ADD_SUBDIRECTORY(Half)
ADD_SUBDIRECTORY(sgi_tesselator)

IF(BUILD_TESTING)
	ADD_SUBDIRECTORY(tests)
ENDIF(BUILD_TESTING)

INSTALL(TARGETS k3dsdk
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib)
INSTALL(FILES ${HEADERS} DESTINATION include/k3d/k3dsdk)
INSTALL(FILES ${k3dsdk_BINARY_DIR}/version.h DESTINATION include/k3d/k3dsdk)

